microservice learn note